<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/custom_color_background"
    tools:context=".view.profile.MyProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/logoutBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/custom_color_primary"
            app:menu="@menu/logout_menu"
            app:title="@string/profile_fragment_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/subreddit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintVertical_bias="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_user_name"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_profile"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/img_profile"
                app:layout_constraintTop_toBottomOf="@+id/img_profile"
                tools:text="Nickname" />

            <TextView
                android:id="@+id/date_creation_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_user_name"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/name_txt"
                app:layout_constraintStart_toStartOf="@+id/name_txt"
                app:layout_constraintTop_toBottomOf="@+id/name_txt"
                tools:text="01-01-2023" />

            <TextView
                android:id="@+id/karma_pub_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/post_karma"
                app:layout_constraintEnd_toEndOf="@+id/value_karma_pub_txt"
                app:layout_constraintStart_toStartOf="@+id/value_karma_pub_txt"
                app:layout_constraintTop_toBottomOf="@+id/value_karma_pub_txt" />

            <TextView
                android:id="@+id/value_karma_pub_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/date_creation_txt"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_creation_txt"
                tools:text="777" />


            <TextView
                android:id="@+id/karma_phil_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/awarder_karma"
                app:layout_constraintEnd_toEndOf="@+id/value_karma_phil_txt"
                app:layout_constraintStart_toStartOf="@+id/value_karma_phil_txt"
                app:layout_constraintTop_toBottomOf="@+id/value_karma_phil_txt" />

            <TextView
                android:id="@+id/value_karma_phil_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/karma_pub_txt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/karma_pub_txt"
                app:layout_constraintTop_toBottomOf="@+id/karma_pub_txt"
                tools:text="777" />

            <TextView
                android:id="@+id/value_karma_com_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/date_creation_txt"
                app:layout_constraintTop_toBottomOf="@+id/date_creation_txt"
                tools:text="777" />

            <TextView
                android:id="@+id/karma_com_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comment_karma"
                app:layout_constraintEnd_toEndOf="@+id/value_karma_com_txt"
                app:layout_constraintStart_toStartOf="@+id/value_karma_com_txt"
                app:layout_constraintTop_toBottomOf="@+id/value_karma_com_txt" />

            <TextView
                android:id="@+id/value_karma_recip_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/karma_com_txt"
                app:layout_constraintStart_toStartOf="@+id/karma_com_txt"
                app:layout_constraintTop_toBottomOf="@+id/karma_com_txt"
                tools:text="777" />

            <TextView
                android:id="@+id/karma_recip_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="@string/awardee_karma"
                app:layout_constraintEnd_toEndOf="@+id/value_karma_recip_txt"
                app:layout_constraintStart_toStartOf="@+id/value_karma_recip_txt"
                app:layout_constraintTop_toBottomOf="@+id/value_karma_recip_txt" />

            <TextView
                android:id="@+id/friendsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/friends"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/karma_recip_txt"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="@+id/karma_phil_txt"
                app:layout_constraintTop_toBottomOf="@+id/karma_phil_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddFriend"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/custom_color_primary"
        android:text="@string/btn_friend_list"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/subreddit"
        app:layout_constraintStart_toStartOf="@+id/subreddit"
        app:layout_constraintTop_toBottomOf="@+id/subreddit" />

</androidx.constraintlayout.widget.ConstraintLayout>